WiP: Primitive message on our start page

--- a/metager/resources/less/metager/pages/startpage/startpage.less
+++ b/metager/resources/less/metager/pages/startpage/startpage.less
@@ -8,6 +8,15 @@ html {
   scroll-behavior: smooth;
 }
 
+#searchbar-replacement {
+  grid-area: search;
+  text-align: center;
+  >.btn {
+    border: 1px solid black;
+    margin-right: 5px;
+  }
+}
+
 div.startpage {
   margin: 0;
   padding: 0;
