--- a/metager/resources/less/metager/pages/startpage/startpage.less
+++ b/metager/resources/less/metager/pages/startpage/startpage.less
@@ -11,9 +11,18 @@ html {
 #searchbar-replacement {
   grid-area: search;
   text-align: center;
+  line-height: 200%;
   >.btn {
     border: 1px solid black;
     margin-right: 5px;
+  }
+  >.btn.login {
+    text-color: @story-diversity-color;
+    background-color: @story-diversity-background;
+  }
+  >.btn.create-key {
+    text-color: @story-eco-color;
+    background-color: @story-eco-background;
   }
 }
 
