--- a/metager/resources/less/metager/pages/startpage/startpage.less
+++ b/metager/resources/less/metager/pages/startpage/startpage.less
@@ -12,16 +12,15 @@ html {
   grid-area: search;
   text-align: center;
   line-height: 200%;
-  >.btn {
-    border: 1px solid black;
-    margin-right: 5px;
-  }
   >.btn.login {
     text-color: @story-diversity-color;
+    border: 1px solid @story-diversity-color;
     background-color: @story-diversity-background;
+    margin-right: 5px;
   }
   >.btn.create-key {
     text-color: @story-eco-color;
+    border: 1px solid @story-eco-color;
     background-color: @story-eco-background;
   }
 }
