add javascript and password manager storage

--- a/metager/resources/less/metager/pages/startpage/startpage.less
+++ b/metager/resources/less/metager/pages/startpage/startpage.less
@@ -14,7 +14,6 @@ html {
   padding-inline: 1rem;
   grid-area: search;
   text-align: center;
-  line-height: 200%;
   display: grid;
   row-gap: 0.5rem;
 
@@ -33,7 +32,7 @@ html {
         @media (max-width: 490px) {
           flex-direction: column;
         }
-        > input[type="text"] {
+        > input {
           flex-grow: 1;
         }
       }
