fix style for password field

--- a/metager/resources/less/metager/general/forms.less
+++ b/metager/resources/less/metager/general/forms.less
@@ -58,6 +58,7 @@ label {
 
 // Override content-box in Normalize (* isn't specific enough)
 input[type="text"],
+input[type="password"],
 input[type="email"],
 input[type="number"] {
   background-color: @input-background;
