--- a/metager/resources/less/metager/parts/sidebar.less
+++ b/metager/resources/less/metager/parts/sidebar.less
@@ -268,6 +268,7 @@
 
 .sidebar-opener {
   position: fixed;
+  grid-area: sidebar-opener;
   top: @sidebar-opener-position-top;
   right: @sidebar-opener-position-right;
   margin: 0px;
