--- a/metager/resources/less/metager/parts/searchbar.less
+++ b/metager/resources/less/metager/parts/searchbar.less
@@ -58,6 +58,15 @@
       }
     }
 
+    >#suggest-exit {
+      color: @text-color;
+      font-size: 2rem;
+      line-height: 100%;
+      cursor: pointer;
+      margin-top: -3px;
+      display: none;
+    }
+
     .search-input {
       flex-grow: 1;
       height: 1.5rem;
@@ -176,33 +185,6 @@
         }
       }
     }
-
-    >.partner {
-      display: none;
-      align-items: center;
-      gap: 1rem;
-      padding: 0.25rem 0.5rem;
-      color: inherit;
-
-      >img {
-        width: 16px;
-      }
-
-      >div {
-        >.mark {
-          color: limegreen;
-          font-size: 0.5rem;
-          width: max-content;
-          border: 1px solid limegreen;
-          padding: 0.1rem 0.25rem;
-          border-radius: 5px;
-        }
-      }
-
-      &:hover {
-        background-color: var(--highlight-color);
-      }
-    }
   }
 
   .search-hidden {
@@ -218,7 +200,7 @@
   &[data-suggest="active"]:focus-within {
     display: grid;
 
-    @media (max-height: 780px) {
+    @media (max-height: 700px) {
       z-index: 21;
       position: absolute;
       top: 0;
@@ -230,6 +212,14 @@
       >.suggestions {
         margin-bottom: 0;
         overflow: auto;
+      }
+
+      #search-key {
+        display: none;
+      }
+
+      #suggest-exit {
+        display: block;
       }
     }
 
@@ -308,15 +298,41 @@
       display: grid;
       overflow: auto;
     }
+  }
+}
 
-    @media(max-height: 550px) {
-      height: calc(100dvh - 30px);
+@media(max-height: 550px) {
 
-      >.suggestions {
-        position: initial;
-        border: 0;
-        padding-top: 0;
-        padding-bottom: 0;
+  #research-bar-container:has(.resultpage-searchbar[data-suggest="active"]:focus-within) {
+    padding: 0 !important;
+
+    >#research-bar {
+      align-items: baseline;
+      position: absolute;
+      width: 100%;
+      height: 100dvh;
+      border-bottom-color: @border-color;
+
+      >#header-searchbar,
+      >#header-searchbar>fieldset,
+      >#header-searchbar>fieldset>form,
+      >#header-searchbar>fieldset>form>.searchbar {
+        height: 100%;
+      }
+
+      .resultpage-searchbar {
+        >.suggestions {
+          position: initial;
+          border: 0;
+        }
+
+        #search-key {
+          display: none;
+        }
+
+        #suggest-exit {
+          display: block;
+        }
       }
     }
   }
