add arrow key control

--- a/metager/resources/less/metager/parts/searchbar.less
+++ b/metager/resources/less/metager/parts/searchbar.less
@@ -184,6 +184,10 @@
           background-color: var(--highlight-color);
         }
       }
+
+      &.active {
+        background-color: var(--highlight-color);
+      }
     }
   }
 
