fix suggestion search not using correct suggestion

--- a/metager/resources/less/metager/parts/searchbar.less
+++ b/metager/resources/less/metager/parts/searchbar.less
@@ -160,10 +160,12 @@
       align-items: center;
       color: inherit;
 
-      >button {
+      >a {
         cursor: pointer;
         height: 100%;
         padding-inline: 0.5rem;
+        display: grid;
+        place-content: center;
 
         >img {
           height: 1rem;
